[workspace]
resolver = "3"
members = [
    "e4rthbyte",
    "injector",
    "e4rthbyte/luau",
    "e4rthbyte/offsets",
    "e4rthbyte/rbxapi",
    "e4rthbyte/panichook",
    "e4rthbyte/unc",
]

[profile.release]
lto = true
incremental = false
opt-level = 3
debug = false
strip = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
incremental = true
codegen-units = 32
overflow-checks = true
panic = "unwind"