[package]
name = "injector"
version = "0.1.0"
edition = "2024"

[dependencies]
e4rthbyte = { path = "../e4rthbyte" }
windows = { version = "0.61.1", features = ["Win32", "Win32_System", "Win32_System_Diagnostics", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_Security"] }